syntax = "proto3";

package auth;

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  User user = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  string tenant_id = 4;
}

message RegisterResponse {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
  string tenant_id = 5;
  string external_id = 6;
  string created_at = 7;
  string updated_at = 8;
}

message GetProfileRequest {
  // Empty - uses metadata for auth
}

message GetProfileResponse {
  string user_id = 1;
  string email = 2;
  string role = 3;
  string tenant_id = 4;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
  string tenant_id = 5;
  string external_id = 6;
}
