syntax = "proto3";

package users;

service UsersService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message CreateUserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
  string role = 4;
  string tenant_id = 5;
  string external_id = 6;
}

message CreateUserResponse {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
  string tenant_id = 5;
  string external_id = 6;
  string created_at = 7;
  string updated_at = 8;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
  string tenant_id = 5;
  string external_id = 6;
  string created_at = 7;
  string updated_at = 8;
}

message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string name = 3;
  string password = 4;
  string role = 5;
  string tenant_id = 6;
  string external_id = 7;
}

message UpdateUserResponse {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
  string tenant_id = 5;
  string external_id = 6;
  string created_at = 7;
  string updated_at = 8;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message ListUsersRequest {
  // Empty for now, could add pagination later
}

message ListUsersResponse {
  repeated User users = 1;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
  string tenant_id = 5;
  string external_id = 6;
  string created_at = 7;
  string updated_at = 8;
}
